# routes/api.php
@@ -19,6 +19,7 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::get('tasks/{task}/comments', [CommentController::class, 'index']);
     Route::post('tasks/{task}/comments', [CommentController::class, 'store']);
     Route::get('tasks/{task}/download', [TaskController::class, 'download']);
+    Route::delete('/tasks/{task}/attachment', [TaskController::class, 'removeAttachment']);
     Route::apiResource('comments', CommentController::class)->only(['show', 'update', 'destroy']);
 
     Route::post('/logout', [AuthController::class, 'logout']);
